<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Information</string>
    <string name="menu_slideshow">Browser</string>
    <string name="menu_music">Music</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_record">Record</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_files">Files</string>
</resources>