<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.data.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_datafragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.web.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.sensor.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_record"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.record.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_files"
        android:name="ru.mirea.khadzhioglo.mireaproject.ui.files.FilesFragment"
        android:label="@string/menu_files"
        tools:layout="@layout/fragment_files" />
</navigation>