<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="DataFragment" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_search"
            android:title="WebViewFragment" />
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_record"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_files"
            android:icon="@android:drawable/gallery_thumb"
            android:title="@string/menu_files" />
    </group>
</menu>